<resources>
    <string name="app_name">Werewolf</string>
    <string name="app_name_long">Privacy Friendly Werewolf</string>
    <string name="app_prefix" translatable="false">Privacy Friendly</string>
    <string name="action_help">Help</string>
    <string name="action_tutorial">Tutorial</string>
    <string name="action_settings">Settings</string>
    <string name="action_main">Main menu</string>
    <string name="action_new_game">New Game</string>
    <string name="action_join_game">Join Game</string>
    <string name="action_abort">Abort</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="enter_name">Enter your name</string>
    <string name="button_newPlayer">New Player</string>
    <string name="button_newGame">New Game</string>
    <string name="popup_title_addPlayer">Add Playername</string>
    <string name="button_ignore">Ignore</string>
    <string name="main_welcome">Welcome to the Privacy Friendly Werewolf. Here you can start a new game!</string>
    <string name="main_what_to_do">What do you want to do?</string>
    <string name="main_start_game">New Game</string>
    <string name="main_join_game">Join Game</string>
    <string name="startgame_subtitle">Create A New Game</string>
    <string name="startgame_waiting_for_players">Waiting for other players to connect &#8230;</string>
    <string name="startgame_use_this_ip">Use this IP to connect: </string>
    <string name="startgame_start_game">Start Game</string>
    <string name="startgame_cancel">Cancel</string>
    <string name="startgame_need_wifi">WiFi is mandatory</string>
    <string name="startgame_need_wifi_message">In order to play the game wifi needs to be activated. Please check if it is enabled. If not please go to the settings and activate it.</string>
    <string name="startgame_need_wifi_open_settings">Open Settings</string>
    <string name="startgame_need_players">You need more players</string>
    <string name="startgame_need_players_message">To have more fun with the game you should at least be 6 players. In spite of that, do you still want to proceed to the game?</string>
    <string name="joingame_subtitle">Join Game</string>
    <string name="joingame_enter_ip">Enter the game server\'s ip address and your player name</string>
    <string name="joingame_dst_address">address of gamehost</string>
    <string name="joingame_dst_port">port of gamehost</string>
    <string name="joingame_connect">Connect</string>
    <string name="joingame_cancel">Cancel</string>
    <string name="joingame_playername">Name of Player</string>
    <string name="joingame_connected">You are now connected. Please wait for the game to begin.</string>
    <string name="role_werewolf">Werewolf</string>
    <string name="role_citizen">Villager</string>
    <string name="role_witch">Witch</string>
    <string name="role_seer">Seer</string>
    <string name="gamefield_progress">Progress</string>
    <string name="gamefield_player_card">Player Card</string>
    <string name="gamefield_player_card_message">This is another player\'s card. Try to guess, who is friend and who is foe!</string>
    <string name="gamefield_your_player_card">Your Card</string>
    <string name="gamefield_your_player_card_message">This is your character card. Do you want to know your role?</string>
    <string name="gamefield_player_identity">"Your identity is: "</string>
    <string name="gamefield_abort_game">Abort the game?</string>
    <string name="gamefield_abort_game_message">This will end the game. Your current game status will be lost. Are you sure you want to end the game?</string>
    <string name="gamefield_press_back">Quit the game?</string>
    <string name="gamefield_press_back_message">This will end the game. Your current game status will be lost. Are you sure you want to end the game?</string>
    <string name="gamefield_witch_elixir_action">Use your healing elixir?</string>
    <string name="gamefield_witch_elixir_action_message1">In the current round the following player got killed by the werewolfes: </string>
    <string name="gamefield_witch_elixir_action_message2">Do you want to save this player\'s life by using your healing elixir?</string>
    <string name="gamefield_witch_poison_action">Use your poison elixir?</string>
    <string name="gamefield_witch_poison_action_message">Do you want to use your poison elixir? If yes, select the player you want to poison.</string>
    <string name="about">About</string>
    <string name="version_number" translatable="false">Version 1.0-RC1</string>
    <string name="about_author">Authors: </string>
    <string name="about_author_names" translatable="false">Daniel Gölz, Tobias Kowalski, Florian Staubach</string>
    <string name="about_author_contributors">and contributors.</string>
    <string name="about_affiliation">In affiliation with</string>
    <string name="privacy_friendly">This application belongs to the group of Privacy Friendly Apps developed by Technische Universität Darmstadt. Sourcecode licensed under GPLv3. Images copyright Florian Staubach, TU Darmstadt and Google Inc.</string>
    <string name="about_more_info">More information can be found on:</string>
    <string name="about_github" translatable="false"><a href="https://github.com/SecUSo/privacy-friendly-werewolf">Github-Repo</a></string>
    <string name="about_url" translatable="false"><a href="https://www.secuso.org/pfa">SECUSO-Website</a></string>
    <string name="help">Help</string>
    <string name="help_whatis">What is Privacy Friendly Werewolf?</string>
    <string name="help_whatis_answer">Privacy Friendly Werewolf is an open source Android implementation of the famous Werewolf card game. You can play it with your friends inside a distributed network so that everyone can use its own phone.</string>
    <string name="help_roles">What kind of cards are in the game?</string>
    <string name="help_roles_answer">In the game you have four different roles which are randomly assigned to the players. These roles are Villager, Werewolf, Witch and Seer.</string>
    <string name="help_roles_villager">What can the villagers do?</string>
    <string name="help_roles_villager_answer">The villagers are ordinary citizens. They just do their job: beeing there. They are afraid of there werewolfes but they don\'t have any power to protect themselves. As the werewolfes only awake in the night they look als normal villagers during the day. The only chance to do something against getting killed is, that the villagers observe the behaviour of others. The reason is, that once a day they have elections where all villagers select one of themselves who will put to death.</string>
    <string name="help_roles_werewolfe">What can the werewolfes do?</string>
    <string name="help_roles_werewolfe_answer">The werewolfes are normal villagers during the day, but they awake at night and they kill somebody to satisfy their needs. Of course they don\'t want to be uncovered that\'s why they act very shy and innocent during the day and try to accuse others to be the werewolfes.</string>
    <string name="help_roles_witch">What can the witch do?</string>
    <string name="help_roles_witch_answer">The witch is a very mystic person which appears not very special during the day. But in the night she is preparing potions. She can poison a villager from whom she thinks it is a werewolf. On the other side she can also use her elixir to rescue somebody life if she thinks, this person is important for the game. Unfortunately she is already very old that\'s why she can prepare only one poison and one elixir once in a game.</string>
    <string name="help_roles_seer">What can the seer do?</string>
    <string name="help_roles_seer_answer">The seer has special powers, because although appearing as a ordinary villager during the day he can reveal one\'s identity during the night. The seer is able to do this every night as long as still alive.</string>
    <string name="help_sequence">What is the game\'s sequence?</string>
    <string name="help_sequence_answer">When everyone has checked is identity it is getting dark. \n
1. At the beginning the werewolfes awake and hunt somebody down. \n
2. The witch will get notified who got killed by the werewolfes and choose if she wants to use one of her potions to rescue a just killed villager or if she wants to poison somebody. \n
3. Last the seer awakes and can reveal somebody\'s identity. \n
4. During the day phase all players are awake and try to figure out who is werewolf and who is not. \n
After these phases the process starts again.</string>
    <string name="help_end">When is the game finished?</string>
    <string name="help_end_answer">The game is over, if either the werwolves or the villagers have won. The werewolves win, when the number of living werewolves is greater or equal to the number of living villagers. The villagers win, when all of the werewolves have died.</string>
    <string name="help_privacy">What makes the app privacy-friendly?</string>
    <string name="help_privacy_answer">Privacy Friendly Werewolf is built to use as less permissions as possible. It further does not include any tracking mechanisms or advertisement.</string>
    <string name="help_permission">Which permissions are required in the app?</string>
    <string name="help_permission_answer">Privacy Friendly Werewolf requires the permission to setup an wifi connection It is only used to search nearby devices and to start a communication channel with them. It does not connect to the internet in any way.</string>
    <string name="slide1_heading">Welcome!</string>
    <string name="slide1_text">Hi!
        This tutorial will help you to understand the basic game rules of Privacy Friendly Werewolf so that you can start very soon playing it with your friends.</string>
    <string name="slide2_heading">Let\'s get started</string>
    <string name="slide2_text">To start a game you have two options: You can either start a brand new game waiting for other players to connect or you can just connect to an exisiting game.</string>
    <string name="slide3_heading">The Menu</string>
    <string name="slide3_text">You will find more options like a detailed help, game settings and an about the game page by swiping from the left to the right of the screen.</string>
    <string name="slide4_heading">In the game</string>
    <string name="slide4_text">In the game you will find a status bar at the top. It shows you the current phase the game is in and a timer how much time you have left till the phase is over. In the buttom you will find the players card. You can click your own card, coloured green, to reveal your identity.</string>
    <string name="okay">Okay</string>
    <string name="viewhelp">View Help</string>
    <string name="main_button_welcomedialog">Show Welcome</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="voting_started">The voting has started. Select a player to kill!</string>
    <string name="voting_title">Voting has started!</string>
    <string name="message_werewolfes_awaken">The werewolves awake</string>
    <string name="message_werewolfes_sleep">The werewolves fall asleep</string>
    <string name="message_werewolfes_vote">Werewolves, please vote</string>
    <string name="message_witch_awaken">The witch awakes</string>
    <string name="message_witch_sleep">The witch sleeps</string>
    <string name="message_seer_awaken">The seer awakes</string>
    <string name="message_seer_sleep">The seer sleeps</string>
    <string name="message_villagers_awaken">The village awakes</string>
    <string name="message_villagers_sleep">The village sleeps</string>
    <string name="message_villagers_vote">Villagers, please vote</string>
    <string name="action_about">About</string>
</resources>