<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/nav_group_main"
        android:checkableBehavior="all">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_menu_start"
            android:title="@string/action_main" />
        <item
            android:id="@+id/nav_new_game"
            android:icon="@drawable/ic_menu_new"
            android:title="@string/action_new_game" />
        <item
        android:id="@+id/nav_join_game"
        android:icon="@drawable/ic_menu_compass"
        android:title="@string/action_join_game" />
        <item
            android:id="@+id/nav_game"
            android:icon="@drawable/ic_menu_gallery"
            android:title="TEST: Gamefield" />
    </group>

    <group android:id="@+id/nav_group_add"
        android:checkableBehavior="all">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_help"
            android:title="@string/action_help" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/action_about" />
    </group>
</menu>
