<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.secuso.privacyfriendlywerwolf.activity.MainActivity">

    <TextView
        android:text="@string/main_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/welcomeMsg" />

    <Button
        android:text="@string/main_start_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonStartNewGame"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/main_what_to_do"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_marginTop="35dp"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:layout_below="@+id/welcomeMsg"
        android:layout_alignEnd="@+id/buttonStartNewGame" />

    <Button
        android:text="@string/main_join_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonJoinGame"
        android:layout_marginTop="35dp"
        android:textAlignment="center"
        android:layout_below="@+id/buttonStartNewGame"
        android:layout_centerHorizontal="true" />
</RelativeLayout>